--- a/research/#1.Data_ingestion.ipynb
+++ b/research/#1.Data_ingestion.ipynb
@@ -152,42 +152,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-14 19:19:44,130: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-14 19:19:44,132: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-14 19:19:44,133: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-14 19:19:44,135: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-14 19:19:44,136: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-09-14 19:19:46,916: INFO: 2998683290: artifacts/data_ingestion/MentalHealthDataset.zip download! with following info: \n",
+      "[2024-09-15 18:36:25,260: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-15 18:36:25,262: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-15 18:36:25,263: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-09-15 18:36:25,264: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-15 18:36:25,265: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-09-15 18:36:27,450: INFO: 2998683290: artifacts/data_ingestion/MentalHealthDataset.zip download! with following info: \n",
       "Connection: close\n",
-      "Content-Length: 11631598\n",
+      "Content-Length: 11631610\n",
       "Cache-Control: max-age=300\n",
       "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
       "Content-Type: application/zip\n",
-      "ETag: \"1b5c092bce42d56c654734e13f2116b2fbd66596e52c697b8fd513013be651bb\"\n",
+      "ETag: \"076b227c2da6b52cc15cb95117680fec74c991ac561dcab271faec6a7b7136b0\"\n",
       "Strict-Transport-Security: max-age=31536000\n",
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: E6D5:362303:746616:8947B3:66E5E1CF\n",
+      "X-GitHub-Request-Id: BD7C:207E8C:761324:8C93F4:66E72929\n",
       "Accept-Ranges: bytes\n",
-      "Date: Sat, 14 Sep 2024 19:19:46 GMT\n",
+      "Date: Sun, 15 Sep 2024 18:36:27 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-qpg1257-QPG\n",
+      "X-Served-By: cache-qpg1237-QPG\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1726341585.665866,VS0,VE1744\n",
+      "X-Timer: S1726425386.748066,VS0,VE1262\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 516ffbedcb64c7711c7b64eb77e96884b5315f4c\n",
-      "Expires: Sat, 14 Sep 2024 19:24:46 GMT\n",
+      "X-Fastly-Request-ID: 57b37f79f65e06ba59c278e0444343eaf287a242\n",
+      "Expires: Sun, 15 Sep 2024 18:41:27 GMT\n",
       "Source-Age: 1\n",
       "\n",
       "]\n"
