--- a/research/#1.Data_ingestion.ipynb
+++ b/research/#1.Data_ingestion.ipynb
@@ -2,40 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/workspaces/Mental-Health-Sentiment-Analysis/research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../\")"
+    "import os"
    ]
   },
   {
@@ -46,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'/workspaces/Mental-Health-Sentiment-Analysis'"
+       "'/workspaces/Mental-Health-Sentiment-Analysis/research'"
       ]
      },
      "execution_count": 4,
@@ -64,6 +35,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/Mental-Health-Sentiment-Analysis'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,19 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-15 18:36:25,260: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-15 18:36:25,262: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-15 18:36:25,263: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-15 18:36:25,264: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-15 18:36:25,265: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-09-15 18:36:27,450: INFO: 2998683290: artifacts/data_ingestion/MentalHealthDataset.zip download! with following info: \n",
+      "[2024-09-21 17:22:20,797: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-21 17:22:20,803: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-21 17:22:20,809: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-09-21 17:22:20,810: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-21 17:22:20,811: INFO: common: created directory at: artifacts/data_ingestion]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-09-21 17:22:23,014: INFO: 2998683290: artifacts/data_ingestion/MentalHealthDataset.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 11631610\n",
       "Cache-Control: max-age=300\n",
@@ -175,19 +181,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: BD7C:207E8C:761324:8C93F4:66E72929\n",
+      "X-GitHub-Request-Id: F8BE:7069D:2C9FF1:35705F:66EF00CD\n",
       "Accept-Ranges: bytes\n",
-      "Date: Sun, 15 Sep 2024 18:36:27 GMT\n",
+      "Date: Sat, 21 Sep 2024 17:22:22 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-qpg1237-QPG\n",
+      "X-Served-By: cache-qpg1240-QPG\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1726425386.748066,VS0,VE1262\n",
+      "X-Timer: S1726939341.371423,VS0,VE1118\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 57b37f79f65e06ba59c278e0444343eaf287a242\n",
-      "Expires: Sun, 15 Sep 2024 18:41:27 GMT\n",
+      "X-Fastly-Request-ID: 6101a67cc7d44bcf3b76733cc19bbd9073c0abf7\n",
+      "Expires: Sat, 21 Sep 2024 17:27:22 GMT\n",
       "Source-Age: 1\n",
       "\n",
       "]\n"
