--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'/workspaces/Mental-Health-Sentiment-Analysis/research'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'/workspaces/Mental-Health-Sentiment-Analysis'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,21 +105,22 @@
     "\n",
     "    \n",
     "    def get_data_transformation_config(self) -> DataTransformationConfig:\n",
-    "        config = self.config.data_transformation\n",
+    "        try:\n",
+    "            config = self.config.get('data_transformation', {})\n",
+    "            create_directories([config.get('root_dir', '')])\n",
     "\n",
-    "        create_directories([config.root_dir])\n",
-    "\n",
-    "        data_transformation_config = DataTransformationConfig(\n",
-    "            root_dir=config.root_dir,\n",
-    "            data_path=config.data_path,\n",
-    "        )\n",
-    "\n",
-    "        return data_transformation_config\n"
+    "            data_transformation_config = DataTransformationConfig(\n",
+    "                root_dir=config.get('root_dir', ''),\n",
+    "                data_path=config.get('data_path', ''),\n",
+    "            )\n",
+    "            return data_transformation_config\n",
+    "        except Exception as e:\n",
+    "            raise RuntimeError(f\"Error in data transformation config: {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to /home/codespace/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
     {
@@ -136,13 +137,12 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from src.MentalHealthAnalysis import logger\n",
     "import os\n",
     "import pandas as pd\n",
     "import re\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,6 @@
     "    def train_test_split_save(self):\n",
     "        \"\"\"Splits the data into train/test sets and saves them to the specified directory.\"\"\"\n",
     "        train, test = train_test_split(self.data, test_size=0.2, random_state=101)\n",
-    "        #train_test_split(self.data, test_size=0.25, random_state=42)\n",
     "        \n",
     "        train.to_csv(os.path.join(self.config.root_dir, \"train.csv\"), index=False)\n",
     "        test.to_csv(os.path.join(self.config.root_dir, \"test.csv\"), index=False)\n",
@@ -259,20 +258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-15 19:14:41,272: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-15 19:14:41,273: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-15 19:14:41,275: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-15 19:14:41,275: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-15 19:14:41,276: INFO: common: created directory at: artifacts/data_transformation]\n",
-      "Number of feature words: 50000\n",
-      "Resampled training data shape: (91742, 50002)\n",
+      "[2024-09-21 17:25:19,752: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-21 17:25:19,755: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-21 17:25:19,757: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-09-21 17:25:19,757: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-21 17:25:19,760: INFO: common: created directory at: artifacts/data_transformation]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Training data shape: (42144, 7)\n",
       "Testing data shape: (10537, 7)\n"
      ]
@@ -295,7 +298,7 @@
     "    data_transformation.tokenize_and_stem()\n",
     "    \n",
     "    # Perform vectorization and resampling\n",
-    "    X_train_resampled, X_test_combined, y_train_resampled, y_test = data_transformation.vectorize_text()\n",
+    "    #X_train_resampled, X_test_combined, y_train_resampled, y_test = data_transformation.vectorize_text()\n",
     "    \n",
     "    # Split and save the train/test data\n",
     "    data_transformation.train_test_split_save()\n",
@@ -328,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   },
   "orig_nbformat": 4,
   "vscode": {
