--- a/research/01.Data_ingestion.ipynb
+++ b/research/01.Data_ingestion.ipynb
@@ -2,11 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/Mental-Health-Sentiment-Analysis/research'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"../\")"
    ]
   },
   {
@@ -17,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'/workspaces/Mental-Health-Sentiment-Analysis/research'"
+       "'/workspaces/Mental-Health-Sentiment-Analysis'"
       ]
      },
      "execution_count": 4,
@@ -35,35 +64,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/workspaces/Mental-Health-Sentiment-Analysis'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,25 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-21 17:22:20,797: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-21 17:22:20,803: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-21 17:22:20,809: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-21 17:22:20,810: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-21 17:22:20,811: INFO: common: created directory at: artifacts/data_ingestion]\n"
+      "[2024-09-22 11:33:23,706: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-22 11:33:23,708: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-22 11:33:23,710: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-09-22 11:33:23,710: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-22 11:33:23,711: INFO: common: created directory at: artifacts/data_ingestion]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-21 17:22:23,014: INFO: 2998683290: artifacts/data_ingestion/MentalHealthDataset.zip download! with following info: \n",
+      "[2024-09-22 11:33:25,286: INFO: 2998683290: artifacts/data_ingestion/MentalHealthDataset.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 11631610\n",
       "Cache-Control: max-age=300\n",
@@ -181,20 +181,20 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: F8BE:7069D:2C9FF1:35705F:66EF00CD\n",
+      "X-GitHub-Request-Id: D78C:7D687:385A86:44613C:66EFF93A\n",
       "Accept-Ranges: bytes\n",
-      "Date: Sat, 21 Sep 2024 17:22:22 GMT\n",
+      "Date: Sun, 22 Sep 2024 11:33:24 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-qpg1240-QPG\n",
-      "X-Cache: MISS\n",
+      "X-Served-By: cache-qpg120091-QPG\n",
+      "X-Cache: HIT\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1726939341.371423,VS0,VE1118\n",
+      "X-Timer: S1727004804.489505,VS0,VE349\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 6101a67cc7d44bcf3b76733cc19bbd9073c0abf7\n",
-      "Expires: Sat, 21 Sep 2024 17:27:22 GMT\n",
-      "Source-Age: 1\n",
+      "X-Fastly-Request-ID: 24d23063d5f2a246d7c9fe62e13e487282fab60b\n",
+      "Expires: Sun, 22 Sep 2024 11:38:24 GMT\n",
+      "Source-Age: 0\n",
       "\n",
       "]\n"
      ]
@@ -236,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
