--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -11,20 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/workspaces/Mental-Health-Sentiment-Analysis/research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pwd"
    ]
@@ -40,20 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/workspaces/Mental-Health-Sentiment-Analysis'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pwd"
    ]
@@ -80,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from MentalHealthAnalysis import logger\n",
     "from src.MentalHealthAnalysis.constants import *\n",
     "from src.MentalHealthAnalysis.utils.common import read_yaml, create_directories"
    ]
@@ -114,34 +93,16 @@
     "                data_path=config.get('data_path', ''),\n",
     "            )\n",
     "            return data_transformation_config\n",
+    "\n",
     "        except Exception as e:\n",
     "            raise RuntimeError(f\"Error in data transformation config: {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /home/codespace/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -199,10 +160,14 @@
     "    def clean_text(self):\n",
     "        \"\"\"Applies the `remove_patterns` function to clean the text.\"\"\"\n",
     "        self.data['statement'] = self.data['statement'].apply(self.remove_patterns)\n",
+    "        print(\"Text cleaning completed.\")\n",
+    "        print(self.data.head())\n",
     "    \n",
     "    def tokenize_and_stem(self):\n",
     "        \"\"\"Tokenizes and stems the statements.\"\"\"\n",
     "        self.data['tokens'] = self.data['statement'].apply(word_tokenize)\n",
+    "        print(\"Tokenization completed.\")\n",
+    "        print(self.data.head())\n",
     "        \n",
     "        # Initialize the stemmer\n",
     "        stemmer = PorterStemmer()\n",
@@ -212,6 +177,8 @@
     "            return ' '.join(stemmer.stem(str(token)) for token in tokens)\n",
     "        \n",
     "        self.data['tokens_stemmed'] = self.data['tokens'].apply(stem_tokens)\n",
+    "        print(\"Stemming completed.\")\n",
+    "        print(self.data.head())\n",
     "\n",
     "    def vectorize_text(self):\n",
     "        \"\"\"Vectorizes the text using TF-IDF and combines it with numerical features.\"\"\"\n",
@@ -222,6 +189,8 @@
     "        \n",
     "        # Initialize TF-IDF Vectorizer\n",
     "        vectorizer = TfidfVectorizer(ngram_range=(1, 2), max_features=50000)\n",
+    "        print(\"TF-IDF Vectorizer initialized.\")\n",
+    "        print(X.head())\n",
     "        \n",
     "        # Fit and transform TF-IDF on training data\n",
     "        X_train_tfidf = vectorizer.fit_transform(X_train['tokens_stemmed'])\n",
@@ -246,11 +215,21 @@
     "\n",
     "    def train_test_split_save(self):\n",
     "        \"\"\"Splits the data into train/test sets and saves them to the specified directory.\"\"\"\n",
+    "        print(\"Splitting data into training and test sets...\")\n",
+    "        self.data.head()\n",
     "        train, test = train_test_split(self.data, test_size=0.2, random_state=101)\n",
     "        \n",
-    "        train.to_csv(os.path.join(self.config.root_dir, \"train.csv\"), index=False)\n",
-    "        test.to_csv(os.path.join(self.config.root_dir, \"test.csv\"), index=False)\n",
-    "        \n",
+    "        train.to_csv(os.path.join(self.data, \"train.csv\"), index=False)\n",
+    "        test.to_csv(os.path.join(self.data, \"test.csv\"), index=False)\n",
+    "        print(\"Training Saved.\")\n",
+    "        train.head()\n",
+    "        print(\"Testing Saved.\") \n",
+    "        test.head()\n",
+    "\n",
+    "        logger.info(\"Splited data into training and test sets\")\n",
+    "        logger.info(train.shape)\n",
+    "        logger.info(test.shape)\n",
+    "\n",
     "        print(f\"Training data shape: {train.shape}\")\n",
     "        print(f\"Testing data shape: {test.shape}\")\n",
     "\n"
@@ -258,29 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-09-21 17:25:19,752: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-21 17:25:19,755: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-21 17:25:19,757: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-21 17:25:19,757: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-21 17:25:19,760: INFO: common: created directory at: artifacts/data_transformation]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training data shape: (42144, 7)\n",
-      "Testing data shape: (10537, 7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
@@ -298,7 +257,7 @@
     "    data_transformation.tokenize_and_stem()\n",
     "    \n",
     "    # Perform vectorization and resampling\n",
-    "    #X_train_resampled, X_test_combined, y_train_resampled, y_test = data_transformation.vectorize_text()\n",
+    "    X_train_resampled, X_test_combined, y_train_resampled, y_test = data_transformation.vectorize_text()\n",
     "    \n",
     "    # Split and save the train/test data\n",
     "    data_transformation.train_test_split_save()\n",
