--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -73,8 +73,9 @@
     "    train_data_path: Path\n",
     "    test_data_path: Path\n",
     "    model_name: str\n",
-    "    alpha: float\n",
-    "    l1_ratio: float\n",
+    "    learning_rate: float\n",
+    "    max_depth: int\n",
+    "    n_estimators: int\n",
     "    target_column: str"
    ]
   },
@@ -119,8 +120,9 @@
     "                train_data_path=config.get('train_data_path', ''),\n",
     "                test_data_path=config.get('test_data_path', ''),\n",
     "                model_name=config.get('model_name', ''),\n",
-    "                alpha=params.get('alpha', 0.1),  # Default value if not present\n",
-    "                l1_ratio=params.get('l1_ratio', 0.5),  # Default value if not present\n",
+    "                learning_rate=params.get('learning_rate', 0.5),  # Default value if not present\n",
+    "                max_depth=params.get('max_depth', 7),  # Default value if not present\n",
+    "                n_estimators=params.get('n_estimators', 500),  # Default value if not present\n",
     "                target_column=schema.get('name', '')\n",
     "            )\n",
     "            return model_trainer_config\n",
@@ -134,16 +136,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "from xgboost import XGBClassifier\n",
-    "import joblib\n",
-    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.utils import resample  # If resampling is needed\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.utils import resample\n",
+    "from xgboost import XGBClassifier\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import joblib"
    ]
   },
   {
@@ -164,29 +166,29 @@
     "        # Separate features and target\n",
     "        train_x = train_data.drop([self.config.target_column], axis=1)\n",
     "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
-    "        train_y = train_data[self.config.target_column].values.ravel()\n",
-    "        test_y = test_data[self.config.target_column].values.ravel()\n",
+    "        train_y = train_data[self.config.target_column]\n",
+    "        test_y = test_data[self.config.target_column]\n",
     "\n",
+    "        # Fill NaN values for text columns with empty strings\n",
     "        train_x['statement'] = train_x['statement'].fillna('').astype(str)\n",
-    "        test_x['statement'] = test_x['statement'].fillna('').astype(str) # Replace NaN with an empty string\n",
+    "        test_x['statement'] = test_x['statement'].fillna('').astype(str)\n",
     "\n",
-    "        text_columns = ['statement', 'num_of_characters', 'num_of_sentences', 'tokens','tokens_stemmed']\n",
+    "        # List of text columns to apply TF-IDF\n",
+    "        text_columns = ['statement', 'num_of_characters', 'num_of_sentences', 'tokens', 'tokens_stemmed']\n",
     "\n",
-    "        # Apply TF-IDF to each text column separately using pipelines\n",
-    "        text_transformers = [(f'tfidf_{col}', Pipeline([\n",
-    "            ('tfidf', TfidfVectorizer(max_features=1000))\n",
-    "        ]), col) for col in text_columns]\n",
+    "        # List of numeric columns for scaling\n",
+    "        numeric_columns = train_x.select_dtypes(include=['float64', 'int64']).columns.tolist()\n",
     "\n",
-    "        # Create a column transformer to apply TF-IDF to text columns and scaling to numerical columns\n",
-    "        # Define preprocessors for text and numeric data\n",
+    "        # Define the ColumnTransformer: TF-IDF for text, StandardScaler for numerical features\n",
     "        preprocessor = ColumnTransformer(\n",
     "            transformers=[\n",
-    "                ('text', TfidfVectorizer(), 'statement'),  # Use correct column name\n",
-    "                ('num', StandardScaler(), train_x.select_dtypes(include=['float64', 'int64']).columns.tolist())  # Adjust for your numeric column(s)\n",
-    "            ]\n",
+    "                ('text', TfidfVectorizer(), 'statement'),  # Apply TF-IDF to 'statement' column\n",
+    "                ('num', StandardScaler(), numeric_columns)  # Apply StandardScaler to numerical columns\n",
+    "            ],\n",
+    "            remainder='drop'  # Drop other columns if not specified\n",
     "        )\n",
     "\n",
-    "        # Create a pipeline that first transforms the data, then fits the model\n",
+    "        # Create a pipeline that includes preprocessing and model training\n",
     "        model_pipeline = Pipeline(steps=[\n",
     "            ('preprocessor', preprocessor),\n",
     "            ('classifier', XGBClassifier(learning_rate=0.5, max_depth=7, n_estimators=500, random_state=101))\n",
@@ -198,7 +200,7 @@
     "        # Predict the labels on the test data\n",
     "        y_pred = model_pipeline.predict(test_x)\n",
     "\n",
-    "        # Evaluate the model performance using accuracy\n",
+    "        # Evaluate model performance using accuracy\n",
     "        accuracy = accuracy_score(test_y, y_pred)\n",
     "        print(f\"Model Accuracy: {accuracy:.4f}\")\n",
     "\n",
@@ -209,12 +211,11 @@
     "        model_path = os.path.join(self.config.root_dir, self.config.model_name)\n",
     "        joblib.dump(model_pipeline, model_path)\n",
     "\n",
-    "        # Optionally print or log success\n",
     "        print(f\"Model saved at {model_path}\")\n",
     "\n",
     "    # Optional: Add a method for resampling\n",
     "    def _resample(self, X, y):\n",
-    "        # Example of resampling\n",
+    "        # Example of resampling: upsampling the minority class\n",
     "        df = pd.concat([pd.DataFrame(X), pd.Series(y, name='target')], axis=1)\n",
     "        majority_class = df['target'].mode()[0]\n",
     "        minority_class = df['target'].value_counts().index[1]\n",
@@ -222,12 +223,16 @@
     "        df_majority = df[df['target'] == majority_class]\n",
     "        df_minority = df[df['target'] == minority_class]\n",
     "        \n",
+    "        # Upsample the minority class\n",
     "        df_minority_upsampled = resample(df_minority, \n",
     "                                         replace=True, \n",
     "                                         n_samples=len(df_majority), \n",
     "                                         random_state=101)\n",
     "        \n",
+    "        # Combine majority class with upsampled minority class\n",
     "        df_upsampled = pd.concat([df_majority, df_minority_upsampled])\n",
+    "        \n",
+    "        # Separate features and target\n",
     "        X_upsampled = df_upsampled.drop(['target'], axis=1)\n",
     "        y_upsampled = df_upsampled['target']\n",
     "        \n",
@@ -243,23 +248,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-21 18:22:23,471: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-21 18:22:23,473: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-21 18:22:23,475: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-21 18:22:23,476: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-21 18:22:23,476: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2024-09-22 14:41:37,117: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-22 14:41:37,119: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-22 14:41:37,121: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-09-22 14:41:37,121: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-22 14:41:37,122: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['index', 'statement', 'num_of_characters', 'num_of_sentences', 'tokens',\n",
-      "       'tokens_stemmed'],\n",
-      "      dtype='object')\n",
-      "Index(['index', 'statement', 'num_of_characters', 'num_of_sentences', 'tokens',\n",
-      "       'tokens_stemmed'],\n",
-      "      dtype='object')\n",
       "Model Accuracy: 0.8730\n",
       "Model saved at artifacts/model_trainer/model.joblib\n"
      ]
@@ -299,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   },
   "orig_nbformat": 4,
   "vscode": {
