--- a/research/mental-health-sentiment-analysis-nlp-ml.ipynb
+++ b/research/mental-health-sentiment-analysis-nlp-ml.ipynb
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/kaggle/input/sentiment-analysis-for-mental-health/Combined Data.csv\", index_col = 0)\n",
+    "df = pd.read_csv(\"/kaggle/input/sentiment-analysis-for-mental-health/Combined Data.csv\")\n",
     "df.sample(5)"
    ]
   },
