--- a/research/01.Data_ingestion.ipynb
+++ b/research/01.Data_ingestion.ipynb
@@ -159,18 +159,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-22 11:33:23,706: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-22 11:33:23,708: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-22 11:33:23,710: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-22 11:33:23,710: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-22 11:33:23,711: INFO: common: created directory at: artifacts/data_ingestion]\n"
+      "[2024-09-22 23:29:15,492: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-22 23:29:15,497: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-22 23:29:15,500: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-09-22 23:29:15,501: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-22 23:29:15,503: INFO: common: created directory at: artifacts/data_ingestion]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-22 11:33:25,286: INFO: 2998683290: artifacts/data_ingestion/MentalHealthDataset.zip download! with following info: \n",
+      "[2024-09-22 23:29:17,793: INFO: 2998683290: artifacts/data_ingestion/MentalHealthDataset.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 11631610\n",
       "Cache-Control: max-age=300\n",
@@ -181,20 +181,20 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: D78C:7D687:385A86:44613C:66EFF93A\n",
+      "X-GitHub-Request-Id: 4666:7C691:44EF5A:53367C:66F0A84C\n",
       "Accept-Ranges: bytes\n",
-      "Date: Sun, 22 Sep 2024 11:33:24 GMT\n",
+      "Date: Sun, 22 Sep 2024 23:29:17 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-qpg120091-QPG\n",
-      "X-Cache: HIT\n",
+      "X-Served-By: cache-qpg1248-QPG\n",
+      "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1727004804.489505,VS0,VE349\n",
+      "X-Timer: S1727047756.293720,VS0,VE1084\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 24d23063d5f2a246d7c9fe62e13e487282fab60b\n",
-      "Expires: Sun, 22 Sep 2024 11:38:24 GMT\n",
-      "Source-Age: 0\n",
+      "X-Fastly-Request-ID: 42ca16afeeb47e719a20f6acd8c3fed0f527e3f1\n",
+      "Expires: Sun, 22 Sep 2024 23:34:17 GMT\n",
+      "Source-Age: 1\n",
       "\n",
       "]\n"
      ]
