--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -108,7 +108,7 @@
     "import pandas as pd\n",
     "import re\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "from nltk.stem import PorterStemmer\n",
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataTransformation:\n",
+    "class DataTransformation: \n",
     "    def __init__(self, config):\n",
     "        self.config = config\n",
     "    \n",
@@ -137,11 +137,10 @@
     "    def preprocessing(self):\n",
     "        \"\"\"Performs preprocessing steps such as handling missing values and text cleaning.\"\"\"\n",
     "        self.data.dropna(inplace=True)\n",
-    "        \n",
-    "        # Label encoding target variable 'y'\n",
-    "        lbl_enc = LabelEncoder()\n",
-    "        self.data['status'] = lbl_enc.fit_transform(self.data['status'].values)\n",
-    "        \n",
+    "\n",
+    "        # Reset index after dropping rows\n",
+    "        self.data.reset_index(drop=True, inplace=True)\n",
+    "\n",
     "        # Create additional features based on text length and number of sentences\n",
     "        self.data['num_of_characters'] = self.data['statement'].str.len()\n",
     "        self.data['num_of_sentences'] = self.data['statement'].apply(lambda x: len(sent_tokenize(x)))\n",
@@ -160,38 +159,51 @@
     "    def clean_text(self):\n",
     "        \"\"\"Applies the `remove_patterns` function to clean the text.\"\"\"\n",
     "        self.data['statement'] = self.data['statement'].apply(self.remove_patterns)\n",
-    "        print(\"Text cleaning completed.\")\n",
-    "        print(self.data.head())\n",
     "    \n",
     "    def tokenize_and_stem(self):\n",
     "        \"\"\"Tokenizes and stems the statements.\"\"\"\n",
     "        self.data['tokens'] = self.data['statement'].apply(word_tokenize)\n",
-    "        print(\"Tokenization completed.\")\n",
-    "        print(self.data.head())\n",
     "        \n",
     "        # Initialize the stemmer\n",
     "        stemmer = PorterStemmer()\n",
     "\n",
     "        # Function to stem tokens\n",
     "        def stem_tokens(tokens):\n",
-    "            return ' '.join(stemmer.stem(str(token)) for token in tokens)\n",
+    "            return [stemmer.stem(token) for token in tokens]  # Return list of tokens\n",
     "        \n",
     "        self.data['tokens_stemmed'] = self.data['tokens'].apply(stem_tokens)\n",
-    "        print(\"Stemming completed.\")\n",
-    "        print(self.data.head())\n",
     "\n",
     "    def vectorize_text(self):\n",
     "        \"\"\"Vectorizes the text using TF-IDF and combines it with numerical features.\"\"\"\n",
+    "    \n",
+    "        # Print columns to debug\n",
+    "\n",
+    "        # Label encoding target variable 'y'\n",
+    "        #target_columns = ['Anxiety', 'Bipolar', 'Depression', 'Personality disorder', 'Stress', 'Suicidal']\n",
+    "    \n",
+    "        # Check if target columns exist\n",
+    "        # if not all(col in self.data.columns for col in target_columns):\n",
+    "        #     raise KeyError(f\"One or more target columns {target_columns} are not found in the dataset.\")\n",
+    "    \n",
+    "        #y = self.data[target_columns]\n",
+    "\n",
+    "        # Convert multi-label to single label (argmax across rows)\n",
+    "        #y_single = y.values.argmax(axis=1)\n",
+    "        onehot_encoder = OneHotEncoder(sparse=False)\n",
+    "        y_onehot = onehot_encoder.fit_transform(self.data['status'].values)\n",
+    "        self.data = y_onehot.argmax(axis=1)\n",
+    "\n",
+    "        print(f\"Columns in the dataset: {self.data.columns}\")\n",
+    "\n",
+    "        # Drop the target columns from X\n",
+    "        X = self.data.drop(target_columns, axis=1)\n",
+    "\n",
     "        # Split data into train and test sets\n",
-    "        X = self.data.drop('status', axis=1)\n",
-    "        y = self.data['status']\n",
-    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=101)\n",
-    "        \n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y_single, test_size=0.2, random_state=101)\n",
+    "\n",
     "        # Initialize TF-IDF Vectorizer\n",
     "        vectorizer = TfidfVectorizer(ngram_range=(1, 2), max_features=50000)\n",
-    "        print(\"TF-IDF Vectorizer initialized.\")\n",
-    "        print(X.head())\n",
-    "        \n",
+    "\n",
     "        # Fit and transform TF-IDF on training data\n",
     "        X_train_tfidf = vectorizer.fit_transform(X_train['tokens_stemmed'])\n",
     "        X_test_tfidf = vectorizer.transform(X_test['tokens_stemmed'])\n",
@@ -213,26 +225,28 @@
     "        print(f\"Resampled training data shape: {X_train_resampled.shape}\")\n",
     "        return X_train_resampled, X_test_combined, y_train_resampled, y_test\n",
     "\n",
-    "    def train_test_split_save(self):\n",
-    "        \"\"\"Splits the data into train/test sets and saves them to the specified directory.\"\"\"\n",
-    "        print(\"Splitting data into training and test sets...\")\n",
-    "        self.data.head()\n",
-    "        train, test = train_test_split(self.data, test_size=0.2, random_state=101)\n",
-    "        \n",
-    "        train.to_csv(os.path.join(self.data, \"train.csv\"), index=False)\n",
-    "        test.to_csv(os.path.join(self.data, \"test.csv\"), index=False)\n",
-    "        print(\"Training Saved.\")\n",
-    "        train.head()\n",
-    "        print(\"Testing Saved.\") \n",
-    "        test.head()\n",
     "\n",
-    "        logger.info(\"Splited data into training and test sets\")\n",
-    "        logger.info(train.shape)\n",
-    "        logger.info(test.shape)\n",
+    "    def train_test_split_save(self, X_train_resampled, X_test_combined, y_train_resampled, y_test):\n",
+    "        \"\"\"Saves the processed train/test sets to the specified directory.\"\"\"\n",
+    "        print(\"Saving transformed training and test sets...\")\n",
     "\n",
-    "        print(f\"Training data shape: {train.shape}\")\n",
-    "        print(f\"Testing data shape: {test.shape}\")\n",
-    "\n"
+    "        # Combine X_train_resampled and y_train_resampled\n",
+    "        train = pd.DataFrame(X_train_resampled.toarray(), columns=[f'feature_{i}' for i in range(X_train_resampled.shape[1])])\n",
+    "        train['target'] = y_train_resampled.values\n",
+    "\n",
+    "        # Combine X_test_combined and y_test\n",
+    "        test = pd.DataFrame(X_test_combined.toarray(), columns=[f'feature_{i}' for i in range(X_test_combined.shape[1])])\n",
+    "        test['target'] = y_test.values\n",
+    "\n",
+    "        # Ensure directory exists\n",
+    "        os.makedirs(self.config.processed_data_dir, exist_ok=True)\n",
+    "    \n",
+    "        # Save to CSV\n",
+    "        train.to_csv(os.path.join(self.config.processed_data_dir, \"train.csv\"), index=False)\n",
+    "        test.to_csv(os.path.join(self.config.processed_data_dir, \"test.csv\"), index=False)\n",
+    "\n",
+    "        print(f\"Training data saved to {os.path.join(self.config.processed_data_dir, 'train.csv')}\")\n",
+    "        print(f\"Testing data saved to {os.path.join(self.config.processed_data_dir, 'test.csv')}\")\n"
    ]
   },
   {
@@ -260,7 +274,7 @@
     "    X_train_resampled, X_test_combined, y_train_resampled, y_test = data_transformation.vectorize_text()\n",
     "    \n",
     "    # Split and save the train/test data\n",
-    "    data_transformation.train_test_split_save()\n",
+    "    data_transformation.train_test_split_save(X_train_resampled, X_test_combined, y_train_resampled, y_test)\n",
     "\n",
     "except Exception as e:\n",
     "    raise e\n"
